--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.1",
     "cra-template": "1.1.2",
+    "create-react-app": "^4.0.3",
     "dexie": "^3.1.0-alpha.9",
     "dexie-react-hooks": "^1.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2"
+    "react-redux": "^7.2.3",
+    "react-scripts": "4.0.2",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
