--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.3",
-    "react-scripts": "4.0.2",
-    "redux": "^4.0.5"
+    "react-scripts": "4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
