--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dexie": "^3.1.0-alpha.9",
     "dexie-react-hooks": "^1.0.6",
     "react": "^17.0.1",
+    "react-custom-chat": "^0.6.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.2"
