--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "create-react-app": "^4.0.3",
     "dexie": "^3.1.0-alpha.9",
     "dexie-react-hooks": "^1.0.6",
+    "npm": "^8.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.3",
@@ -27,7 +28,8 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
+      ">0.3%",
+      "not ie 11",
       "not dead",
       "not op_mini all"
     ],
