--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.3",
-    "react-scripts": "4.0.2"
+    "react-scripts": "4.0.2",
+    "react-toastify": "^8.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
