--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.3",
-    "react-scripts": "4.0.2",
+    "react-scripts": "^5.0.0",
     "react-toastify": "^8.1.0"
   },
   "scripts": {
@@ -39,9 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@testing-library/cypress": "^8.0.1",
-    "cypress": "^8.7.0"
   }
 }
